[tool.poetry]
name = "epstein"
version = "0.1.0"
description = ""
authors = ["Lorenzo Fresco <lfresco@deloitte.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
